@@ -30,6 +30,8 @@ production until the actual release.
 : all provided arguments.
 * Improved JSON export (bug 37418).
 * Improved Special:Ask UI.
+* Enabled Special:Ask parameters form to be collapsible.
+* Added individual format help links to enable access to online help manuals.
 * Added tests for the query processor, the store, data items and result printers,
 : including base test classes for the later two that can be used by extensions.
 * No more inline CSS and JavaScript on special pages (now all resource loader modules).
@@ -37,7 +39,7 @@ production until the actual release.
 * Added SMWIResultPrinter interface to type hint result printers against.
 * Added continuation support to the Ask API.
 * Migrated Validator parameter definitions to new Validator 0.5 array style.
-* Added possibility to replace the icon for service links (bug 40644)
+* Added possibility to change the appearance of the service link icon via CSS (bug 40644)
 
 === Dropped features ===
 
